<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#55FF6E40"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/cardview_dark_background"
        android:text="@string/choose_a_category"
        android:layout_marginBottom="5dp" />

    <Spinner
        android:id="@+id/action_bar_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/upload_song"
        android:onClick="openAudioFiles"
        android:id="@+id/openAudioFiles" />

    <TextView
        android:id="@+id/textViewSongsFilesSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/select_a_file"
        android:textColor="#795548" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />


    <Button
        android:id="@+id/Uploadbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="uploadFileTofirebase"
        android:text="@string/upload"
        android:textStyle="bold|italic" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#795548"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album1"
            android:textColor="#795548"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist1"
            android:textColor="#795548"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/dataa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataa"
            android:textColor="#795548"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration1"
            android:textColor="#795548"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/imageuploadactivity"
            android:layout_width="match_parent"
            android:onClick="openAlbumUploadsActivity"
            android:layout_height="wrap_content"
            android:text="@string/open_upload_album_activity">

        </Button>
    </LinearLayout>



</LinearLayout>