<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".UploadAlbumActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout"
        android:orientation="horizontal"
    >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:layout_weight="1"
            android:id="@+id/buttonChoose"
            >
        </Button>

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:minHeight="48dp"
            android:hint="@string/enter_album_name">

        </EditText>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_below="@+id/linearlayout"
        android:orientation="vertical"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_category"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            >

        </TextView>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp">

        </Spinner>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:id="@+id/imageview"
            android:layout_marginTop="20dp"
            >

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/buttonupload"
            android:text="upload"
            >

        </Button>


    </LinearLayout>




</RelativeLayout>